examples/invalid/test33.alice

The looking-glass hatta ()
opened 
   i was a number of 0.
   eventually (i & 16) because
     .
   enough times
   perhaps (~i) so
     .
   or maybe (i) so
     .
   because Alice was unsure which 
closed
